<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus-E-Board</string>
    <string name="action_settings">Settings</string>
    <string name="user">User ID</string>
    <string name="pass">Password</string>
    <string name="login_student">Student</string>
    <string name="login_teacher">Teacher</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot?</string>
    <string name="register">Register</string>
    <string name="not_register">Not Registered yet!</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="register_as">Register As</string>
    <string name="enter_reg_email">Enter Registred Email</string>
    <string name="close">Close</string>
    <string name="get_reg_email">Enter Registered Email-ID</string>
    <string name="submit">Submit</string>
    <string name="splashChk">Don\'t show this again</string>
    <string name="login_as">Login As</string>
    <string name="login_preference_file">xyz.leapmind.ceb.campus_e_board.Main.LOGIN_PREFERENCE_FILE_KEY</string>
    <string name="student_login_preference">check_student_login</string>
    <string name="teacher_login_preference">check_teacher_login</string>
    <string name="unique_code">Enter Unique Code sent in Email</string>
    <string name="enter_unique_code">Enter Unique Code</string>
    <string name="new_passwd">Enter New Password</string>
    <string name="enter_newpasswd">New Password</string>
    <string name="confirm_passwd">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Spinner Array-->
    <string-array name="student_class">
        <item>Class</item>
        <item>IT</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>ECE</item>
        <item>Bio.Tech</item>
        <item>Mech.</item>
    </string-array>

    <string-array name="student_semester">
        <item>Semester</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
    </string-array>

    <string-array name="student_section">
        <item>Section</item>
        <item>A</item>
        <item>B</item>
    </string-array>

    <string-array name="student_group">
        <item>Group</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
