<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chicago"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.leapmind.ceb.campus_e_board.Main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linerlayout_bg"
        android:orientation="vertical"
        android:padding="5dp">

        <!--User ID Label-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/userID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null" />

        <!-- Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pass"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null" />

        <!-- Button Label-->

        <Button
            android:id="@+id/btn_login"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_default_bg"
            android:padding="5dp"
            android:text="@string/login" />

        <!-- Link -->
        <Button
            android:id="@+id/forgot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forgot"
            android:textAllCaps="false"
            android:textColor="@color/flat_btn_text"
            android:textSize="16sp"
            android:theme="@style/flat_btn" />

    </LinearLayout>

</RelativeLayout>
