<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chicago"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linerlayout_bg"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unique_code"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/unique_no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/new_passwd"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/new_passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableLeft="@drawable/passwd"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/confirm_passwd"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/confirm_passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableLeft="@drawable/passwd"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null" />


        <Button
            android:id="@+id/btn_new_passwd"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_default_bg"
            android:onClick="forgotOtpValidatons"
            android:padding="10dp"
            android:text="@string/submit" />
    </LinearLayout>

</RelativeLayout>


